# learn-code

./: .gitignore  README.md  leetcode.md  pyproject.toml
1/: README.md  main.py
10/: asdf.py
11/: word-break-ii.py  word-break.py
2/: classes.py  main.py
3/: bubble.py  merge.py
4/: classes.py  linkedlist.py  scopes.py
5/: linkedlist.py
6/: rotate-array.py  squares-of-a-sorted-array.py
7/: README.md  move-zeroes.py  test.py  two-sum-ii-input-array-is-sorted.py
8/: decorators.py  middle-of-the-linked-list.py  reverse-string.py  reverse-words-in-a-string-iii.py  timer.py
9/: 3.py
interviews/tm/: sre_challenge.txt  tm-code.py
leetcode150/: go.mod  majority-element.go  trapping-rain-water  trapping-rain-water.c  trapping-rain-water.py  valid-palindrome.go
random/: merge-sorted-array.py  metaname.sh  python-tests.py
