[tool.poetry]
name = "learn-code"
version = "0.1.0"
description = ""
authors = ["Azat Almukhametov <aaazat7@gmail.com>"]
readme = "README.md"
packages = [{include = "learn_code"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.playground.dependencies]
jupyterlab = "^4.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
